modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_non_iterable_types.gd
class Iterator:
	func do() -> void:
		pass

func test():
	for x in Object.new():
		pass
	for x in Iterator:
		pass
	for x in Iterator.new():
		pass
